manifest/grafana/grafana-ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    meta.helm.sh/release-name: grafana
    meta.helm.sh/release-namespace: monitoring
  labels:
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: grafana
    app.kubernetes.io/version: 12.0.0
    helm.sh/chart: grafana-9.0.0
  name: grafana-tailscale
  namespace: monitoring
spec:
  ingressClassName: traefik-tailscale
  rules:
  - host: grafana.tailscale.oky.pke.str08.net
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grafana.tailscale.oky.pke.str08.net
    secretName: grafana.tailscale.oky.pke.str08.net-dns01
